--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "site-structure",
-  "version": "1.0.0",
+  "version": "0.0.3",
   "description": "Gives back the structure of a website e.g. index, blog, contact",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,16 @@
   },
   "homepage": "https://github.com/marvinosswald/site-structure",
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-mocha-test": "^0.12.7",
     "mocha": "^2.1.0",
-    "should": "^5.0.1"
+    "should": "^5.0.1",
+    "should-promised": "^0.1.0"
+  },
+  "dependencies": {
+    "es6-module-loader": "^0.14.0",
+    "object-assign": "^2.0.0",
+    "request": "^2.53.0"
   }
 }
